--- a/package.json
+++ b/package.json
@@ -21,8 +21,15 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ngrx/effects": "7.0.0",
+    "@ngrx/entity": "7.0.0",
+    "@ngrx/router-store": "7.0.0",
     "@ngrx/store": "7.0.0",
+    "@ngrx/store-devtools": "7.0.0",
+    "@types/papaparse": "4.5.7",
     "core-js": "^2.5.4",
+    "ngrx-store-localstorage": "6.0.0",
+    "papaparse": "4.6.3",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
