--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ngrx/store-devtools": "7.0.0",
     "@types/papaparse": "4.5.7",
     "core-js": "^2.5.4",
+    "d3-scale": "2.2.2",
     "ngrx-store-localstorage": "7.0.0",
     "papaparse": "4.6.3",
     "rxjs": "~6.3.3",
@@ -39,6 +40,7 @@
     "@angular/cli": "~7.2.2",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
+    "@types/d3-scale": "2.1.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
