--- a/package.json
+++ b/package.json
@@ -22,16 +22,15 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
-    "@ngrx/effects": "7.0.0",
-    "@ngrx/entity": "7.0.0",
-    "@ngrx/router-store": "7.0.0",
-    "@ngrx/store": "7.0.0",
-    "@ngrx/store-devtools": "7.0.0",
-    "@types/papaparse": "4.5.7",
+    "@ngrx/effects": "8.0.0",
+    "@ngrx/entity": "8.0.0",
+    "@ngrx/router-store": "8.0.0",
+    "@ngrx/store": "8.0.0",
+    "@ngrx/store-devtools": "8.0.0",
     "core-js": "^2.5.4",
     "d3-scale": "2.2.2",
     "ngrx-store-localstorage": "7.0.0",
-    "papaparse": "4.6.3",
+    "papaparse": "5.0.0",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -45,15 +44,15 @@
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "@types/papaparse": "4.5.9",
     "codelyzer": "^5.0.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.1",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ngrx-store-freeze": "0.2.4",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
