--- a/package.json
+++ b/package.json
@@ -12,50 +12,50 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.0.0",
-    "@angular/cdk": "8.0.0",
-    "@angular/common": "~8.0.0",
-    "@angular/compiler": "~8.0.0",
-    "@angular/core": "~8.0.0",
-    "@angular/forms": "~8.0.0",
-    "@angular/material": "8.0.0",
-    "@angular/platform-browser": "~8.0.0",
-    "@angular/platform-browser-dynamic": "~8.0.0",
-    "@angular/router": "~8.0.0",
-    "@ngrx/effects": "8.0.0",
-    "@ngrx/entity": "8.0.0",
-    "@ngrx/router-store": "8.0.0",
-    "@ngrx/store": "8.0.0",
-    "@ngrx/store-devtools": "8.0.0",
-    "core-js": "^2.5.4",
-    "d3-scale": "2.2.2",
-    "ngrx-store-localstorage": "7.0.0",
-    "papaparse": "5.0.0",
-    "rxjs": "~6.5.2",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "@angular/animations": "9.0.0-rc.7",
+    "@angular/cdk": "8.2.3",
+    "@angular/common": "~9.0.0-rc.7",
+    "@angular/compiler": "~9.0.0-rc.7",
+    "@angular/core": "~9.0.0-rc.7",
+    "@angular/forms": "~9.0.0-rc.7",
+    "@angular/material": "8.2.3",
+    "@angular/platform-browser": "~9.0.0-rc.7",
+    "@angular/platform-browser-dynamic": "~9.0.0-rc.7",
+    "@angular/router": "~9.0.0-rc.7",
+    "@ngrx/effects": "8.6.0",
+    "@ngrx/entity": "8.6.0",
+    "@ngrx/router-store": "8.6.0",
+    "@ngrx/store": "8.6.0",
+    "@ngrx/store-devtools": "8.6.0",
+    "core-js": "^3.6.0",
+    "d3-scale": "3.2.1",
+    "ngrx-store-localstorage": "8.0.0",
+    "papaparse": "5.1.1",
+    "rxjs": "~6.5.3",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.0",
-    "@angular/cli": "~8.0.2",
-    "@angular/compiler-cli": "~8.0.0",
-    "@angular/language-service": "~8.0.0",
-    "@types/d3-scale": "2.1.0",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "@types/papaparse": "4.5.9",
-    "codelyzer": "^5.0.1",
-    "jasmine-core": "~2.99.1",
+    "@angular-devkit/build-angular": "~0.900.0-rc.7",
+    "@angular/cli": "~9.0.0-rc.7",
+    "@angular/compiler-cli": "~9.0.0-rc.7",
+    "@angular/language-service": "~9.0.0-rc.7",
+    "@types/d3-scale": "2.1.1",
+    "@types/jasmine": "~3.5.0",
+    "@types/jasminewd2": "~2.0.8",
+    "@types/node": "^12.12.21",
+    "@types/papaparse": "5.0.3",
+    "codelyzer": "^5.2.1",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.4.5"
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.1",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "~5.4.2",
+    "ts-node": "~8.5.4",
+    "tslint": "~5.20.1",
+    "typescript": "~3.6.4"
   }
 }
